# AI_TICKET_VERIFY

./: .env.example  .gitignore  .replit  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml  replit.md  start_mongodb.sh
attached_assets/: Pasted-Here-is-a-perfect-clean-end-to-end-prompt-you-can-paste-into-Replit-to-build-your-full-A-1763903002598_1763903002598.txt
client/: next.config.js  package-lock.json  package.json  tailwind.config.js
client/src/components/: CameraCapture.tsx  EventCard.tsx  Navbar.tsx  QRScanner.tsx  TicketCard.tsx
client/src/lib/: api.ts  web3.ts
client/src/pages/: dashboard.tsx  events.tsx  index.tsx  validator.tsx  verify.tsx
client/src/pages/events/: [id].tsx
client/src/pages/organizer/: create.tsx
contracts/: DEPLOYMENT.md  NFTTicket.sol
server/: database.py  main.py  requirements.txt  restart_server.sh
server/models/: event.py  ticket.py  user.py
server/routes/: auth.py  events.py  tickets.py  validator.py  verify.py
server/services/: ai_verify.py  blockchain.py  ipfs_service.py  qie_sdk.py  qie_validator.py
