[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pymongo>=4.15.4",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "web3>=7.14.0",
]
